# ga4-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/codeql/: codeql-rust.yml
.github/workflows/: code-coverage.yml  codeql.yml  dependency-governance.yml  linux-artifact.yml  rust-validation.yml
docs/: GETTING_STARTED.md  SECURITY_MODEL.md  TOOL_GUIDE.md  auth-modes.md  decision-0001-v1-contract-and-duckdb.md  dependency-governance.md  observability-events.md  payload-contract-v1.md  release-readiness-v1.md  scratchpad-operator-guide.md  sql-policy-contract.md
scripts/: dependency_governance_check.sh  ga4-local-user-setup.sh  sql_policy_toolkit_conformance.sh
spec/: payload_contract_v1.schema.json  tool_schema_snapshot.scratchpad.v1.json  tool_schema_snapshot.v1.json
src/: auth_ux.rs  config.rs  contract.rs  error.rs  ga_client.rs  http_config.rs  http_runtime.rs  lib.rs  main.rs  scratchpad.rs  server.rs  sql_safety.rs  tools.rs
tests/: contract_safety_conformance.rs  live_google_auth_smoke.rs  live_http_auth_surface_smoke.rs  scratchpad_integration_load.rs  tool_surface_profiles.rs
