[package]
name = "ga4-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Google Analytics 4 MCP server with read/report tools and local scratchpad support."
repository = "https://github.com/sednalabs/ga4-mcp"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
duckdb = { version = "1.4.4", default-features = false, features = ["bundled"] }
gcp_auth = "0.12.6"
ipnet = "2.11.0"
mcp-toolkit-http = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-http" }
mcp-toolkit-core = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-core" }
mcp-toolkit-auth = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-auth" }
mcp-toolkit-observability = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-observability", features = ["tracing-bridge"] }
mcp-toolkit-policy-core = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "99a17c957049723fcc4cc6239068a3a5c42a751c", package = "mcp-toolkit-policy-core" }
mcp-toolkit-policy-runtime = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "99a17c957049723fcc4cc6239068a3a5c42a751c", package = "mcp-toolkit-policy-runtime" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "http2", "query", "rustls"] }
rmcp = { version = "1.2.0", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
rustls = { version = "0.23.36", features = ["ring"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
mcp-toolkit-testing = { git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "1cf322071d84e27fe3002ee53198353af0ea6513", package = "mcp-toolkit-testing" }
